RESOLVED FIXED142462
[iOS Media] Video buffer progress missing on iPhones
https://bugs.webkit.org/show_bug.cgi?id=142462
Summary [iOS Media] Video buffer progress missing on iPhones
Dean Jackson
Reported 2015-03-08 14:44:38 PDT
[iOS Media] Video buffer progress missing on iPhones
Attachments
Patch (12.15 KB, patch)
2015-03-08 14:53 PDT, Dean Jackson
eric.carlson: review+
Dean Jackson
Comment 1 2015-03-08 14:45:02 PDT
Dean Jackson
Comment 2 2015-03-08 14:53:36 PDT
WebKit Commit Bot
Comment 3 2015-03-08 14:55:26 PDT
Attachment 248205 [details] did not pass style-queue: ERROR: Source/WebCore/platform/ios/WebVideoFullscreenInterface.h:50: The parameter name "bufferedTime" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/WebProcess/ios/WebVideoFullscreenManager.h:74: The parameter name "bufferedTime" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.h:79: The parameter name "bufferedTime" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 3 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dean Jackson
Comment 4 2015-03-08 21:55:58 PDT
Note You need to log in before you can comment on or make changes to this bug.