Source/WebCore/platform/ios/WebVideoFullscreenInterface.h
@@ -47,6 +47,7 @@ public:
     virtual void resetMediaState() = 0;
     virtual void setDuration(double) = 0;
     virtual void setCurrentTime(double currentTime, double anchorTime) = 0;
+    virtual void setBufferedTime(double bufferedTime) = 0;
     virtual void setRate(bool isPlaying, float playbackRate) = 0;
     virtual void setVideoDimensions(bool hasVideo, float width, float height) = 0;
     virtual void setSeekableRanges(const TimeRanges&) = 0;
