Source/WebKit2/WebProcess/ios/WebVideoFullscreenManager.h
@@ -71,6 +71,7 @@ protected:
     virtual void resetMediaState() override;
     virtual void setDuration(double) override;
     virtual void setCurrentTime(double currentTime, double anchorTime) override;
+    virtual void setBufferedTime(double bufferedTime) override;
     virtual void setRate(bool isPlaying, float playbackRate) override;
     virtual void setVideoDimensions(bool hasVideo, float width, float height) override;
     virtual void setSeekableRanges(const WebCore::TimeRanges&) override;
